c/examples/writing-a-c-compiler-tests/tests/chapter_6/valid/ternary_short_circuit_2.c
int main(void) {
    int a = 0;
    int b = 0;
    a ? (b = 1) : (b = 2);
    return b;
}