c/examples/writing-a-c-compiler-tests/tests/chapter_6/invalid_parse/extra_credit/label_expression_clause.c
int main(void) {
    1 && label: 2;
}